src-tauri/check_out.txt
    Checking d-speedexplorer v0.1.26 (D:\SpeedExplorer\src-tauri)
error[E0425]: cannot find value `item` in this scope
   --> src\sta_worker.rs:503:52
    |
503 |             let context_menu: IContextMenu = match item.BindToHandler(None, &BHID_SFUIObject) {
    |                                                    ^^^^ not found in this scope

warning: unused import: `windows::Win32::UI::Shell::Common::ITEMIDLIST`
  --> src\sta_worker.rs:23:5
   |
23 | use windows::Win32::UI::Shell::Common::ITEMIDLIST;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `SIGDN_DESKTOPABSOLUTEPARSING`
  --> src\sta_worker.rs:28:45
   |
28 |     FOF_RENAMEONCOLLISION, KF_FLAG_DEFAULT, SIGDN_DESKTOPABSOLUTEPARSING, SIGDN_FILESYSPATH,
   |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `PCWSTR`
   --> src\sta_worker.rs:477:32
    |
477 |     use windows::core::{PCSTR, PCWSTR};
    |                                ^^^^^^

error: never type fallback affects this call to an `unsafe` function
   --> src\sta_worker.rs:491:19
    |
491 |             match SHCreateItemFromIDList(pidl_bytes.as_ptr() as *const _) {
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = warning: this changes meaning in Rust 2024 and in a future release in all editions!
    = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>
    = help: specify the type explicitly
    = note: `#[deny(never_type_fallback_flowing_into_unsafe)]` (part of `#[deny(rust_2024_compatibility)]`) on by default
help: use `()` annotations to avoid fallback changes
    |
491 |             match SHCreateItemFromIDList::<()>(pidl_bytes.as_ptr() as *const _) {
    |                                         ++++++

error[E0308]: mismatched types
   --> src\sta_worker.rs:576:42
    |
576 |                     let size = ILGetSize(pidl as *const _);
    |                                --------- ^^^^^^^^^^^^^^^^ expected `Option<*const ITEMIDLIST>`, found `*const _`
    |                                |
    |                                arguments to this function are incorrect
    |
    = note:     expected enum `std::option::Option<*const ITEMIDLIST>`
            found raw pointer `*const _`
note: function defined here
   --> D:\Rust\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.61.3\src\Windows\Win32\UI\Shell\mod.rs:915:15
    |
915 | pub unsafe fn ILGetSize(pidl: Option<*const Common::ITEMIDLIST>) -> u32 {
    |               ^^^^^^^^^
help: try wrapping the expression in `Some`
    |
576 |                     let size = ILGetSize(Some(pidl as *const _));
    |                                          +++++                +

error[E0308]: mismatched types
   --> src\sta_worker.rs:579:28
    |
579 |                     ILFree(pidl as *const _);
    |                     ------ ^^^^^^^^^^^^^^^^ expected `Option<*const ITEMIDLIST>`, found `*const _`
    |                     |
    |                     arguments to this function are incorrect
    |
    = note:     expected enum `std::option::Option<*const ITEMIDLIST>`
            found raw pointer `*const _`
note: function defined here
   --> D:\Rust\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.61.3\src\Windows\Win32\UI\Shell\mod.rs:903:15
    |
903 | pub unsafe fn ILFree(pidl: Option<*const Common::ITEMIDLIST>) {
    |               ^^^^^^
help: try wrapping the expression in `Some`
    |
579 |                     ILFree(Some(pidl as *const _));
    |                            +++++                +

Some errors have detailed explanations: E0308, E0425.
For more information about an error, try `rustc --explain E0308`.
warning: `d-speedexplorer` (lib) generated 3 warnings
error: could not compile `d-speedexplorer` (lib) due to 5 previous errors; 3 warnings emitted
